DevOCL/src/objects/CLQ_Program_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_One_Parent_Per_Child_On_Premise__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Programs in which the Ohio Department of Job and Family Services determines that at least one parent, custodian, or guardian of each child is on the premises of the program offering child care and is readily accessible at all times, except that child care provided on the premises at which a parent, custodian, or guardian is employed more than two and one-half hours a day shall be licensed.</description>
        <inlineHelpText>Programs in which the Ohio Department of Job and Family Services determines that at least one parent, custodian, or guardian of each child is on the premises of the program offering child care and is readily accessible at all times, except that child care</inlineHelpText>
        <label>One Parent Per Child On-Premise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Operate_for_2_or_less_weeks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A program of child care that operates for two or less consecutive weeks.</description>
        <inlineHelpText>A program of child care that operates for two or less consecutive weeks.</inlineHelpText>
        <label>Operate for 2 or less weeks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Operating_in_Existing_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you are only serving school-age children, will you be operating in an existing public school or chartered nonpublic school building?</description>
        <inlineHelpText>If you are only serving school-age children, will you be operating in an existing public school or chartered nonpublic school building?</inlineHelpText>
        <label>Operating in Existing School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Organization_IRN__c</fullName>
        <description>What is the Information Retrieval Number (IRN) for the Organization/Affiliation that will operate this program?</description>
        <inlineHelpText>What is the Information Retrieval Number (IRN) for the Organization/Affiliation that will operate this program?</inlineHelpText>
        <label>Organization IRN</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Other_Closure_Reason__c</fullName>
        <label>Other Closure Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Other_Toxic_Substances__c</fullName>
        <label>Other Toxic Substances</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Ownership_Type__c</fullName>
        <formula>TEXT( CLQ_Associated_Organization__r.Ownership )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Part_Day_Option_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Day Option Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Phone_Extension__c</fullName>
        <formula>TEXT(CLQ_Program__r.CLQ_Phone_Extension__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Phone_Number__c</fullName>
        <formula>CLQ_Program__r.CLQ_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Physical_State__c</fullName>
        <label>State.</label>
        <picklist>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Physical_Street_Address_2__c</fullName>
        <label>Physical Street Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Physical_Street_Address__c</fullName>
        <label>Physical Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Physical_Zipcode__c</fullName>
        <label>Zipcode.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Place_of_worship_with_childcare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child care in places of worship, during religious activities, when children are cared for while at least one parent, guardian, or custodian of each child is participating in such activities and is readily available.</description>
        <inlineHelpText>Child care in places of worship, during religious activities, when children are cared for while at least one parent, guardian, or custodian of each child is participating in such activities and is readily available.</inlineHelpText>
        <label>Place of worship with childcare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Planned_First_Day_of_Operation__c</fullName>
        <label>Planned First Day of Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Planned_Last_Day_of_Operation__c</fullName>
        <label>Planned Last Day of Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Portal_Application_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as a Check when an Application is updated from Portal by the Program&apos;s contact</description>
        <label>Portal Application Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Pre_and_School_CC_not_head_start__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Any preschool program or school child program, except a head start program, that is subject to licensure by the ODE.</description>
        <inlineHelpText>Any preschool program or school child program, except a head start program, that is subject to licensure by the ODE.</inlineHelpText>
        <label>Pre and School CC not head start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_City__c</fullName>
        <label>Program City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Email_Address__c</fullName>
        <formula>CLQ_Program__r.CLQ_Program_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Email_ID__c</fullName>
        <label>Program Email ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_License_Registration_Status__c</fullName>
        <formula>TEXT( CLQ_Program__r.CLQ_License_Registration_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program License / Registration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_License_Start_Date__c</fullName>
        <formula>CLQ_Program__r.CLQ_License_Issue_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program License Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_License_Type__c</fullName>
        <formula>TEXT( CLQ_Program__r.CLQ_License_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Location_Type__c</fullName>
        <description>Where will your program operate?</description>
        <inlineHelpText>Select an option based on where your program will operate?</inlineHelpText>
        <label>Program Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Non-residential location (Center)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant’s residence (Family Child Care)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Name__c</fullName>
        <formula>CLQ_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Number_Recently_Licenses__c</fullName>
        <description>Enter the Program Number.  If you own more than one program, list the most recently licensed.</description>
        <inlineHelpText>Enter the Program Number.  If you own more than one program, list the most recently licensed.</inlineHelpText>
        <label>Program Number (Recently Licenses)</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Number__c</fullName>
        <label>Program Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Phone__c</fullName>
        <label>Program Phone</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Record_Type__c</fullName>
        <formula>CLQ_Program__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_State__c</fullName>
        <label>Program State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Status__c</fullName>
        <formula>TEXT(CLQ_Program__r.CLQ_Program_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_StreetAddress_1__c</fullName>
        <label>Program StreetAddress</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_StreetAddress_2__c</fullName>
        <label>Program StreetAddress 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Street_Address_1__c</fullName>
        <formula>CLQ_Program__r.CLQ_Street_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Street_Address_2__c</fullName>
        <formula>CLQ_Program__r.CLQ_Street_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Street Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Type_Formula__c</fullName>
        <formula>CLQ_Program__r.CLQ_Program_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Zipcode__c</fullName>
        <label>Program Zipcode</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipLabel>Program Transactions</relationshipLabel>
        <relationshipName>Program_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_s_Email__c</fullName>
        <label>Program&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CLQ_Proposed_Open_Date__c</fullName>
        <label>Proposed Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Provider_Number__c</fullName>
        <label>Provider Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Radon_Gas__c</fullName>
        <label>Radon Gas</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Reactivation_Comments__c</fullName>
        <label>Reactivation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Reactivation_Date__c</fullName>
        <label>Reactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Reactivation_Processed_By__c</fullName>
        <label>Reactivation Processed By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Reason_Closed__c</fullName>
        <label>Reason Closed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Recommend_License__c</fullName>
        <label>Recommend License?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Recommendation_Comment__c</fullName>
        <label>Recommendation Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Recommendation__c</fullName>
        <label>Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdraw</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Registration_Status_Date__c</fullName>
        <label>Registration Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn by Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Specialist or Reviewer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed by System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed at Applicant’s Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return for Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Supervisor or Approver Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Reviewer&apos;s Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Regulated_by_other_state_departments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Programs that provide child care funded and regulated, or operated and regulated, by state departments, other than the ODJFS or the ODE.</description>
        <inlineHelpText>Programs that provide child care funded and regulated, or operated and regulated, by state departments, other than the ODJFS or the ODE.</inlineHelpText>
        <label>Regulated by other state departments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Rejected_By_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True in the Approval Process when a Transaction is rejected</description>
        <label>Rejected By Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Religious_Activities_No_Childcare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Religious activities which do not provide child care.</description>
        <inlineHelpText>Religious activities which do not provide child care.</inlineHelpText>
        <label>Religious Activities No Childcare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Requested_Total_Capacity__c</fullName>
        <label>Requested Total Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Requested_Under_2_5_Capacity__c</fullName>
        <formula>CLQ_Program__r.CLQ_Total_Enrollment_Under_2_5_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Under 2.5 Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Requested_Under_2_Capacity__c</fullName>
        <label>Requested Under 2 Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Reviewer_Checklist__c</fullName>
        <label>Reviewer Checklist</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Reviewer_Notes__c</fullName>
        <label>Reviewer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CLQ_Same_as_Physical_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Physical Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Same_as_Program_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Program Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Send_Notification_to_Program__c</fullName>
        <label>Send Notification to Program</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Site_IRN__c</fullName>
        <description>What is the site IRN for the exact address where the program will be located?</description>
        <inlineHelpText>What is the site IRN for the exact address where the program will be located?</inlineHelpText>
        <label>Site IRN</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Site_Name__c</fullName>
        <label>Site Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Start_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When True, it should start the Approval Process</description>
        <label>Start Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_State_Comments__c</fullName>
        <label>State Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_State__c</fullName>
        <formula>TEXT(CLQ_Program__r.CLQ_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Storage_of_Hazardous_Toxic_Material__c</fullName>
        <label>Storage of Hazardous/Toxic Material</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Submission_Date__c</fullName>
        <description>The date transaction was submitted</description>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Supervised_activities_less_than_6_hr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supervised training, instruction, or activities of children in specific areas, including, but not limited to: art; drama; dance; music; gymnastics, swimming, or another athletic skill or sport; computers; or an educational subject conducted on an organized or periodic basis, no more than one day a week, and for no more than six hours duration.</description>
        <inlineHelpText>Supervised training, instruction, or activities of children in specific areas, including, but not limited to: art; drama; dance; music; gymnastics, swimming, or another athletic skill or sport; computers; or an educational subject conducted on an organize</inlineHelpText>
        <label>Supervised activities less than 6 hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Tanks_currently_in_use__c</fullName>
        <label>Tanks currently in use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Total_No_of_Rooms_In_Use__c</fullName>
        <label>Total No. of Rooms In-Use</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Total_No_of_Staff__c</fullName>
        <label>Total No. of Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Total_Payment_Recieved__c</fullName>
        <label>Total Payment Recieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLQ_Transaction_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Transaction_Status_Date__c</fullName>
        <label>Transaction Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Reviewer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn by Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed by System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed at Applicant’s Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver Review In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Underground_Tanks_In_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Underground Tanks In-Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Withdraw_Reasons__c</fullName>
        <label>Withdraw Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Zip_Code__c</fullName>
        <formula>CLQ_Program__r.CLQ_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferral_Duration__c</fullName>
        <label>Deferral Duration</label>
        <picklist>
            <controllingField>Annual_Report_Overall_Requirements__c</controllingField>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desk_Review_Comments__c</fullName>
        <label>Desk Review Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Desk_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desk Review Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desk_Review_Rating_Reason__c</fullName>
        <label>Unable to Rate Reasons</label>
        <picklist>
            <controllingField>Annual_Report_Overall_Requirements__c</controllingField>
            <picklistValues>
                <fullName>Change of Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet requirements of the Administrative Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet requirements of the Family and Community Partnership domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet requirements of the Learning and Development domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet requirements of the Staff Qualifications and Professional Development domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC change of provider type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intent to Revoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating Reduced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntarily Discontinue Participation in SUTQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Notes__c</fullName>
        <label>External Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsApproved_PrgTran__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field gets automatically updated when the program transaction approved.</description>
        <label>IsApproved</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>